--- a/examples/Tutorial_1_dJUICE_basic.ipynb
+++ b/examples/Tutorial_1_dJUICE_basic.ipynb
@@ -39,8 +39,6 @@
     "We start with a square domain of $[0, 10^6~\\text{m}]\\times[0,10^6~\\text{m}]$ with $5\\times10^3$~m mesh resolution \n",
     "\n",
     "**TODO**: \n",
-    "1. change to triangle()\n",
-    "2. move exp, data, etc. to dJUICE folder\n",
     "3. use IJulia.load(domainname) to show the exp file"
    ]
   },
@@ -52,10 +50,39 @@
    "outputs": [],
    "source": [
     "# Currently, triangle uses ISSM version, we need to fix the bug in triangle, and use the julia version\n",
-    "md = triangle2(md,issmdir()*\"/test/Exp/Square.exp\",50000.) \n",
+    "md1 = triangle(md,issmdir()*\"/test/Exp/Square.exp\",50000.) \n",
     "\n",
     "# need to install GLMakie\n",
     "plotmodel(md, \"mesh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cfe30df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IJulia.load(issmdir()*\"/test/Exp/Square.exp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "562046c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Name:domainoutline\n",
+    "## Icon:0\n",
+    "# Points Count  Value\n",
+    "5 1.\n",
+    "# X pos Y pos\n",
+    "0 0\n",
+    "1000000 0\n",
+    "1000000 1000000\n",
+    "0 1000000\n",
+    "0 0\n"
    ]
   },
   {
@@ -66,7 +93,6 @@
     "# Set the geometry\n",
     "\n",
     "**TODO**\n",
-    "1. Fix the print bug in notebook\n",
     "2. add subplot"
    ]
   },
