CHG: updating notebooks

--- a/examples/Tutorial_1_dJUICE_basic.ipynb
+++ b/examples/Tutorial_1_dJUICE_basic.ipynb
@@ -8,21 +8,52 @@
     "# Initialize the model\n",
     "We follow the same model structure as in ISSM: [https://issm.jpl.nasa.gov](https://issm.jpl.nasa.gov)\n",
     "\n",
-    "The model `md` consists of \n",
-    "\n",
-    "We will go through the settings one by one"
+    "All the data belonging to a model (geometry, node coordinates, results, etc.) is held in the same struct `model`. To create a new model:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d10ed787",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Model:\n"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               mesh: DJUICE.Mesh2dTriangle      -- mesh properties\n",
+      "           geometry: DJUICE.Geometry            -- surface elevation, bedrock topography, ice thickness,...\n",
+      "               mask: DJUICE.Mask                -- defines grounded and floating regions\n",
+      "          materials: DJUICE.Materials           -- material properties\n",
+      "     initialization: DJUICE.Initialization      -- initial state\n",
+      "          constants: DJUICE.Constants           -- physical constants\n",
+      "           friction: DJUICE.BuddFriction        -- basal friction\n",
+      "      basalforcings: DJUICE.Basalforcings       -- basal forcings\n",
+      "                smb: DJUICE.SMBforcings         -- surface mass balance\n",
+      "       timestepping: DJUICE.Timestepping        -- time stepping for transient simulations\n",
+      "      stressbalance: DJUICE.Stressbalance       -- parameters stress balance simulations\n",
+      "      masstransport: DJUICE.Masstransport       -- parameters mass transport simulations\n",
+      "          transient: DJUICE.Transient           -- parameters for transient simulations\n",
+      "          inversion: DJUICE.Inversion           -- parameters for inverse methods\n",
+      "            calving: DJUICE.DefaultCalving      -- parameters for calving\n",
+      "           levelset: DJUICE.Levelset            -- parameters for moving boundaries (level-set method)\n",
+      "    frontalforcings: DJUICE.Frontalforcings     -- parameters for frontalforcings\n",
+      "            results: Dict{Any, Any}             -- model results\n"
+     ]
+    }
+   ],
    "source": [
-    "using dJUICE\n",
+    "using DJUICE\n",
     "\n",
     "md = model()"
    ]
@@ -34,7 +65,12 @@
    "source": [
     "# Generate Mesh\n",
     "\n",
-    "call `md=triangle(md,domainname,resolution)` to generate an unstructured triangular mesh based on the domain outline defined by `domainname`, with a characteristic length `resolution` for the mesh \n",
+    "To generate a triangular mesh, you need:\n",
+    "- a domain outline defined by `domainname` (which is the name of an `exp` file, see below)\n",
+    "- define a characteristic element length `resolution`\n",
+    "```julia\n",
+    "md=triangle(md, domainname, resolution)\n",
+    "```\n",
     "\n",
     "We start with a square domain of $[0, 10^6~\\text{m}]\\times[0,10^6~\\text{m}]$ with $5\\times10^3$~m mesh resolution \n",
     "\n",
@@ -44,21 +80,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ce84abf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FigureAxisPlot()"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Currently, triangle uses ISSM version, we need to fix the bug in triangle, and use the julia version\n",
     "md1 = triangle(md,issmdir()*\"/test/Exp/Square.exp\",50000.) \n",
     "\n",
     "# need to install GLMakie\n",
-    "plotmodel(md, \"mesh\")"
+    "#using Makie\n",
+    "fig = plotmodel(md, \"mesh\")\n",
+    "#display(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8cfe30df",
    "metadata": {},
    "outputs": [],
@@ -69,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "562046c3",
+   "id": "56e55281-a08a-44ca-b03a-b0c8c50d5382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d286e4cf",
    "metadata": {},
    "outputs": [],
@@ -123,10 +172,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3e162a0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Figure()"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "md.geometry.thickness = hmax .+ (hmin-hmax)*(md.mesh.y .- ymin)./(ymax-ymin) .+ 0.1*(hmin-hmax)*(md.mesh.x .- xmin)./(xmax-xmin)\n",
     "plotmodel(md, md.geometry.thickness)"
@@ -143,10 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7b166a25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Figure()"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "md.geometry.base      = -md.materials.rho_ice/md.materials.rho_water*md.geometry.thickness\n",
     "plotmodel(md, md.geometry.base)"
@@ -162,10 +233,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "022750f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Figure()"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "md.geometry.surface   = md.geometry.base+md.geometry.thickness\n",
     "plotmodel(md, md.geometry.surface)"
@@ -181,10 +263,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "10ac97e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Figure()"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "md.geometry.bed       = md.geometry.base .-10\n",
     "plotmodel(md, md.geometry.bed)"
@@ -393,7 +486,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.0",
+   "display_name": "Julia 1.10.4",
    "language": "julia",
    "name": "julia-1.10"
   },
@@ -401,7 +494,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.0"
+   "version": "1.10.4"
   }
  },
  "nbformat": 4,
