--- a/examples/Tutorial_2_Pine_Island_Glacier.ipynb
+++ b/examples/Tutorial_2_Pine_Island_Glacier.ipynb
@@ -12,15 +12,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ee4276ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   creating datasets for analysis DJUICE.StressbalanceAnalysis\n",
+      "      detecting active vertices\n",
+      "   computing stress balance\n",
+      "   Renumbering degrees of freedom\n",
+      "   Allocating matrices\n",
+      "   Assembling matrices\n",
+      "   Solving matrix system\n",
+      "   checking convergence\n",
+      "   mechanical equilibrium convergence criterion 191.5610576743576 > 5.0 %\n",
+      "   Convergence criterion: norm(du)/norm(u)      303.5134899822427 > 100.0 %\n",
+      "   Allocating matrices\n",
+      "   Assembling matrices\n",
+      "   Solving matrix system\n",
+      "   checking convergence\n",
+      "   mechanical equilibrium convergence criterion 48.12797875557519 > 5.0 %\n",
+      "   Convergence criterion: norm(du)/norm(u)      247.49971643203375 > 100.0 %\n",
+      "   Allocating matrices\n",
+      "   Assembling matrices\n",
+      "   Solving matrix system\n",
+      "   checking convergence\n",
+      "   mechanical equilibrium convergence criterion 36.17362382674937 > 5.0 %\n",
+      "   Convergence criterion: norm(du)/norm(u)      141.24051464314155 > 100.0 %\n",
+      "   Allocating matrices\n",
+      "   Assembling matrices\n",
+      "   Solving matrix system\n",
+      "   checking convergence\n",
+      "   mechanical equilibrium convergence criterion 28.395282737673 > 5.0 %\n",
+      "   Convergence criterion: norm(du)/norm(u)      85.07609025426872 < 100.0 %\n",
+      "   Allocating matrices\n",
+      "   Assembling matrices\n",
+      "   Solving matrix system\n",
+      "   checking convergence\n",
+      "   mechanical equilibrium convergence criterion 21.504999366375394 > 5.0 %\n",
+      "   Convergence criterion: norm(du)/norm(u)      52.92180916368867 < 100.0 %\n",
+      "   Allocating matrices\n",
+      "   Assembling matrices\n",
+      "   Solving matrix system\n",
+      "   checking convergence\n",
+      "   mechanical equilibrium convergence criterion 15.601088791987399 > 5.0 %\n",
+      "   Convergence criterion: norm(du)/norm(u)      33.51078355574398 < 100.0 %\n",
+      "   Allocating matrices\n",
+      "   Assembling matrices\n",
+      "   Solving matrix system\n",
+      "   checking convergence\n",
+      "   mechanical equilibrium convergence criterion 11.032435861614825 > 5.0 %\n",
+      "   Convergence criterion: norm(du)/norm(u)      21.50647660123979 < 100.0 %\n",
+      "   Allocating matrices\n",
+      "   Assembling matrices\n",
+      "   Solving matrix system\n",
+      "   checking convergence\n",
+      "   mechanical equilibrium convergence criterion 7.65319036781311 > 5.0 %\n",
+      "   Convergence criterion: norm(du)/norm(u)      13.950222646584251 < 100.0 %\n",
+      "   Allocating matrices\n",
+      "   Assembling matrices\n",
+      "   Solving matrix system\n",
+      "   checking convergence\n",
+      "   mechanical equilibrium convergence criterion 5.237747421365476 > 5.0 %\n",
+      "   Convergence criterion: norm(du)/norm(u)      9.121005965677305 < 100.0 %\n",
+      "   Allocating matrices\n",
+      "   Assembling matrices\n",
+      "   Solving matrix system\n",
+      "   checking convergence\n",
+      "   mechanical equilibrium convergence criterion 3.552623874323025 < 5.0 %\n",
+      "   Convergence criterion: norm(du)/norm(u)      5.997472033034996 < 100.0 %\n",
+      "\n",
+      "   total number of iterations: 10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Model:\n"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               mesh: DJUICE.Mesh2dTriangle      -- mesh properties\n",
+      "           geometry: DJUICE.Geometry            -- surface elevation, bedrock topography, ice thickness,...\n",
+      "               mask: DJUICE.Mask                -- defines grounded and floating regions\n",
+      "          materials: DJUICE.Materials           -- material properties\n",
+      "     initialization: DJUICE.Initialization      -- initial state\n",
+      "          constants: DJUICE.Constants           -- physical constants\n",
+      "           friction: DJUICE.BuddFriction        -- basal friction\n",
+      "      basalforcings: DJUICE.Basalforcings       -- basal forcings\n",
+      "                smb: DJUICE.SMBforcings         -- surface mass balance\n",
+      "       timestepping: DJUICE.Timestepping        -- time stepping for transient simulations\n",
+      "      stressbalance: DJUICE.Stressbalance       -- parameters stress balance simulations\n",
+      "      masstransport: DJUICE.Masstransport       -- parameters mass transport simulations\n",
+      "          transient: DJUICE.Transient           -- parameters for transient simulations\n",
+      "          inversion: DJUICE.Inversion           -- parameters for inverse methods\n",
+      "            calving: DJUICE.DefaultCalving      -- parameters for calving\n",
+      "           levelset: DJUICE.Levelset            -- parameters for moving boundaries (level-set method)\n",
+      "    frontalforcings: DJUICE.Frontalforcings     -- parameters for frontalforcings\n",
+      "            results: Dict{Any, Any}             -- model results\n"
+     ]
+    }
+   ],
    "source": [
-    "using dJUICE\n",
+    "using DJUICE\n",
     "\n",
     "md = model()\n",
-    "md = triangle2(md,issmdir()*\"/test/Exp/Pig.exp\",10000.)\n",
+    "md = triangle(md,issmdir()*\"/test/Exp/Pig.exp\",10000.)\n",
     "md = setmask( md,issmdir()*\"/test/Exp/PigShelves.exp\",issmdir()*\"/test/Exp/PigIslands.exp\")\n",
     "\n",
     "#Initial velocity and geometry\n",
@@ -71,10 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "51fbe0f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Figure()"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plotmodel(md, md.results[\"StressbalanceSolution\"][\"Vel\"])"
    ]
@@ -90,7 +208,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.0",
+   "display_name": "Julia 1.10.4",
    "language": "julia",
    "name": "julia-1.10"
   },
@@ -98,7 +216,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.0"
+   "version": "1.10.4"
   }
  },
  "nbformat": 4,
